# rustlrn

./: .gitignore  README.md
async-tst/: Cargo.toml
async-tst/src/: main.rs
bhlcsv/: Cargo.toml  README.md
bhlcsv/data/: journalofacademy05acaduoft_0001.json  journalofacademy05acaduoft_0002.json  journalofacademy05acaduoft_0003.json  journalofacademy05acaduoft_0004.json  journalofacademy05acaduoft_0005.json  journalofacademy05acaduoft_0006.json  journalofacademy05acaduoft_0007.json  journalofacademy05acaduoft_0008.json  journalofacademy05acaduoft_0009.json  journalofacademy05acaduoft_0010.json  journalofacademy05acaduoft_0011.json  journalofacademy05acaduoft_0012.json  journalofacademy05acaduoft_0013.json  journalofacademy05acaduoft_0014.json  journalofacademy05acaduoft_0015.json  journalofacademy05acaduoft_0016.json  journalofacademy05acaduoft_0017.json  journalofacademy05acaduoft_0018.json  journalofacademy05acaduoft_0019.json  journalofacademy05acaduoft_0020.json  journalofacademy05acaduoft_0021.json  journalofacademy05acaduoft_0022.json  journalofacademy05acaduoft_0023.json  journalofacademy05acaduoft_0024.json  journalofacademy05acaduoft_0025.json  journalofacademy05acaduoft_0026.json  journalofacademy05acaduoft_0027.json  journalofacademy05acaduoft_0028.json  journalofacademy05acaduoft_0029.json  journalofacademy05acaduoft_0030.json  journalofacademy05acaduoft_0031.json  journalofacademy05acaduoft_0032.json  journalofacademy05acaduoft_0033.json  journalofacademy05acaduoft_0034.json  journalofacademy05acaduoft_0035.json  journalofacademy05acaduoft_0036.json  journalofacademy05acaduoft_0037.json  journalofacademy05acaduoft_0038.json  journalofacademy05acaduoft_0039.json  journalofacademy05acaduoft_0040.json  (+408 more)
bhlcsv/src/: main.rs
gnparser/: Cargo.toml
gnparser/src/: error.rs  lib.rs  method.rs  sci_name.rs
sherborn/: Cargo.toml
sherborn/src/: main.rs
verify/: Cargo.toml
verify/src/: main.rs
