[package]
name = "async-tst"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["thread-pool"]}
crossbeam-channel = "0.4"
