[package]
name = "gnparser"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
atty = "0.2"
same-file = "1"
winapi-util = "0.1.4"
log = "0.4"
stderrlog = "0.4"
thiserror = "1"
strum = "0.18"
strum_macros = "0.18"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures = "*"

[dependencies.clap]
version = "2"
default_features = true
features = ["yaml"]
