[package]
name = "gnparser"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1" }
futures = { version = "0.3", features = ["thread-pool"] }
crossbeam-channel = "0.4"
surf = { version = "1" }
atty = "0.2"
same-file = "1"
winapi-util = "0.1.4"
log = "0.4"
stderrlog = "0.4"
thiserror = "1"
strum = "0.18"
strum_macros = "0.18"
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[dependencies.clap]
version = "2"
default_features = true
features = ["yaml"]
