[package]
name = "verify"
version = "0.1.0"
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "^0.9" #{ path = "../../graphql_client" }
serde = "1"
anyhow = "*"
reqwest = "^0.9"
